syntax = "proto3";
option java_multiple_files = true;
option java_package = "protos";
option java_outer_classname = "VpbcProto";

message VpbcMsg {
    int32 clientID = 1;
    int32 consID = 2;
    bytes data = 3;
}